--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/pg-promise": "^5.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "fs": "^0.0.1-security",
     "nestjs-form-data": "^1.9.1",
     "path": "^0.12.7",
@@ -40,6 +41,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
