--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "nestjs-form-data": "^1.9.1",
     "path": "^0.12.7",
