--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "js-cookie": "^3.0.5",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,9 @@
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cookie-parser": "^1.4.5",
+    "@types/js-cookie": "^3.0.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
